--- a/src/components/Cities/Cities.css
+++ b/src/components/Cities/Cities.css
@@ -1,12 +1,13 @@
 ::-webkit-scrollbar {
-    width: 10px; 
+    width: 12px; 
 }
 ::-webkit-scrollbar-track {
+    background: rgb(247, 245, 245);
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
 }
-.fixed-scrollable-container::-webkit-scrollbar-thumb {
-    background-color: #007D00; 
+::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 179, 179); 
     border-radius: 5px; 
 }
 
