--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -10,6 +10,8 @@
     justify-content: center;
     align-items: center;
     z-index: 999;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 .popup {
     background: #fff;
