--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -16,7 +16,7 @@
     padding: 20px;
     border-radius: 8px;
     width: 100%;
-    max-width: 400px;
+    max-width: 400px !important;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .btnRegister {
